--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,17 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap");
 
-a {
-  color: inherit;
-  text-decoration: none;
+:root {
+  --main-color: #a1f0eb;
+  --color-dark: #1d2231;
+  --text-grey: #8390a2;
+  --white: #fff;
 }
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
 }
